force-app/main/default/objects/Job_Complaint__c/Job_Complaint__c.object-meta.xml
<CustomObject>
    <label>Job Complaint</label>
    <nameField>
        <displayFormat>JC-{000000}</displayFormat>
        <label>Job Complaint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Complaints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>