force-app/main/default/objects/Job_Complaint__c/fields/Complaint_Detail_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Detail_Explanation__c</fullName>
    <label>Complaint Detail / Explanation</label>
    <type>TextArea</type>
</CustomField>