force-app/main/default/objects/Job_Complaint__c/fields/Complaint_Reason__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Reason__c</fullName>
    <label>Complaint Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Color</fullName>
            </value>
            <value>
                <fullName>Finish</fullName>
            </value>
            <value>
                <fullName>Grout Staining</fullName>
            </value>
            <value>
                <fullName>Installation / Bonding</fullName>
            </value>
            <value>
                <fullName>LTD Warehouse Error</fullName>
            </value>
            <value>
                <fullName>Manufacturing Defect</fullName>
            </value>
            <value>
                <fullName>Size</fullName>
            </value>
            <value>
                <fullName>Vendor Warehouse Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>