force-app/main/default/objects/Job_Complaint__c/fields/Complaint_Status__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Status__c</fullName>
    <label>Complaint Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Resolved to Customer&apos;s Satisfaction</fullName>
            </value>
            <value>
                <fullName>Not Resolved to Customer&apos;s Satisfaction</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>