force-app/main/default/objects/Job_Complaint__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which Customer is the purchaser or installer on the job complaint?</inlineHelpText>
    <label>Customer Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Architect - Designer, Dealers, General Accounts, National Accounts, Regional Accounts, Contractor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Compaints (Customer Account)</relationshipLabel>
    <relationshipName>Job_Compaints1</relationshipName>
    <type>Lookup</type>
</CustomField>