force-app/main/default/objects/Job_Complaint__c/fields/Job_Complaint_on_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Job_Complaint_on_Opportunity__c</fullName>
    <inlineHelpText>The opportunity related to this job complaint</inlineHelpText>
    <label>Job Complaint on Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Job Compaints</relationshipLabel>
    <relationshipName>Job_Compaints</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>