force-app/main/default/objects/Job_Complaint__c/fields/LTD_Check__c.field-meta.xml
<CustomField>
    <fullName>LTD_Check__c</fullName>
    <inlineHelpText>The check number for payments made to the customer to resolve the complaint</inlineHelpText>
    <label>LTD Check #</label>
    <type>TextArea</type>
</CustomField>