force-app/main/default/objects/Job_Complaint__c/fields/LTD_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>LTD_Credit_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>The Amount LTD credited to the Customer Account</inlineHelpText>
    <label>LTD Credit Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>