force-app/main/default/objects/Job_Complaint__c/fields/LTD_Credit_Invoice__c.field-meta.xml
<CustomField>
    <fullName>LTD_Credit_Invoice__c</fullName>
    <inlineHelpText>The Dancik invoice number for the customer credit.</inlineHelpText>
    <label>LTD Credit Invoice #</label>
    <type>TextArea</type>
</CustomField>