force-app/main/default/objects/Job_Complaint__c/fields/LTD_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>LTD_Payment_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>The amount LTD paid via check or other method to the Customer Account</inlineHelpText>
    <label>LTD Payment Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>