force-app/main/default/objects/Job_Complaint__c/fields/Opportunity_Architect__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Architect__c</fullName>
    <formula>Job_Complaint_on_Opportunity__r.Specifier__r.Name</formula>
    <label>Opportunity Architect</label>
    <type>Text</type>
</CustomField>