force-app/main/default/objects/Job_Complaint__c/fields/Opportunity_Designer__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Designer__c</fullName>
    <formula>Job_Complaint_on_Opportunity__r.Designer__r.Name</formula>
    <label>Opportunity Designer</label>
    <type>Text</type>
</CustomField>