force-app/main/default/objects/Job_Complaint__c/fields/Related_Dancik_Order_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Related_Dancik_Order_Numbers__c</fullName>
    <inlineHelpText>List the Dancik order number (or numbers) for the material related to the job complaint</inlineHelpText>
    <label>Related Dancik Order Numbers</label>
    <type>TextArea</type>
</CustomField>