force-app/main/default/objects/Job_Complaint__c/fields/Related_Vendor_PO_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Related_Vendor_PO_Numbers__c</fullName>
    <inlineHelpText>List the purchase order numbers related to the job complaint</inlineHelpText>
    <label>Related Vendor PO Numbers</label>
    <type>TextArea</type>
</CustomField>