force-app/main/default/objects/Job_Complaint__c/fields/Total_Cost_to_LTD__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_to_LTD__c</fullName>
    <formula>(LTD_Credit_Amount__c + LTD_Payment_Amount__c)  -  Vendor_Credit_to_LTD__c</formula>
    <inlineHelpText>Formula calculates (LTD Credit Amount + LTD Check Amount) minus Vendor Credit Amount</inlineHelpText>
    <label>Total Cost to LTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>