force-app/main/default/objects/Job_Complaint__c/fields/Total_Days_to_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_to_Resolution__c</fullName>
    <formula>LastModifiedDate  -  CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total days from when complaint was created and last modified (closed)</inlineHelpText>
    <label>Total Days to Resolution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>