force-app/main/default/objects/Job_Complaint__c/fields/Total_Job_Complaint_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Job_Complaint_Cost__c</fullName>
    <formula>LTD_Credit_Amount__c  +  LTD_Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total credits and payments by LTD minus Vendor&apos;s credits to reimburse LTD</inlineHelpText>
    <label>Total Job Complaint Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>