force-app/main/default/objects/Job_Complaint__c/fields/Vendor_Account__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Which Vendor&apos;s product or products are involved in the complaint</inlineHelpText>
    <label>Vendor Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendor, Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Compaints</relationshipLabel>
    <relationshipName>Job_Compaints</relationshipName>
    <type>Lookup</type>
</CustomField>