force-app/main/default/objects/Job_Complaint__c/fields/Vendor_Credit_Received__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Credit_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box after the vendor&apos;s credit has been received by LTD Accounting Department</inlineHelpText>
    <label>Vendor Credit Received?</label>
    <type>Checkbox</type>
</CustomField>