force-app/main/default/objects/Job_Complaint__c/fields/Vendor_Credit_Reference__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Credit_Reference__c</fullName>
    <inlineHelpText>The vendor&apos;s reference number for the credit issues to LTD.</inlineHelpText>
    <label>Vendor Credit Reference #</label>
    <type>TextArea</type>
</CustomField>