force-app/main/default/objects/Job_Complaint__c/fields/Vendor_Credit_to_LTD__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Credit_to_LTD__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>The amount of the Vendor&apos;s credit or payment to LTD</inlineHelpText>
    <label>Vendor Credit to LTD</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>